# rouge

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: create_new_release.yml  release.yml  rust.yml
assets/: help.txt
langgen-english/: Cargo.toml  LICENSE
langgen-english/src/: lib.rs  output_helper.rs  output_queue.rs  queue_adapter_impls.rs  traits.rs
langgen-english/src/output_queue/: mod.rs  output_builder.rs  output_helper.rs
langgen-english/tests/: test_output_queue.rs
langgen-english/tests/common/: mod.rs
langgen_english/: Cargo.toml
langgen_english/src/: lib.rs  queue_adapter_impls.rs  traits.rs
langgen_english/src/output_queue/: mod.rs  output_builder.rs  output_helper.rs
langgen_english/tests/: test_output_queue.rs
langgen_english/tests/common/: mod.rs
src/: camera.rs  components.rs  consume_system.rs  damage_system.rs  drink_system.rs  ecs.rs  entity_adapter.rs  gamelog.rs  gui.rs  inventory_system.rs  main.rs  map.rs  map_indexing_sysem.rs  map_indexing_system.rs  melee_combat_system.rs  messages.rs  monster_ai_systems.rs  player.rs  positions.rs  queues.rs  rect.rs  spawner.rs  visibility_system.rs
src/resources/: camera.rs  gamelog.rs  map.rs  mod.rs
src/scenes/: game.rs  main_menu.rs  mod.rs  save_game.rs  show_text.rs
src/systems/: camera_system.rs  consume_system.rs  damage_system.rs  energy_system.rs  inventory_system.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  monster_ai_systems.rs  output_system.rs  visibility_system.rs
