[package]
name = "rouge"
description = "A simple roguelike game"
repository = "https://github.com/bofh69/rouge/"
keywords = [ "game", "rougelike" ]
categories = [ "games" ]
version = "0.1.0"
license = "GPL-3.0"
authors = ["Sebastian Andersson <sebastian@bittr.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "^0.8.1", path = "vendor/bracket-lib" }
legion = { version = "^0.3.1", path = "vendor/legion" }
langgen_english = { path = "langgen_english" }
crossbeam-channel = "0.5.0"
# bracket-lib = "0.8.*"
# legion = "^0.3.2"
# wfc = "*" # For maps?
# grid_2d = "*" # For the Map and Position/ScreenPosition/MapPosition?
