[package]
name = "rouge"
description = "A simple roguelike game"
repository = "https://github.com/bofh69/rouge/"
keywords = [ "game", "rougelike" ]
categories = [ "games" ]
version = "0.1.0"
license = "GPL-3.0"
authors = ["Sebastian Andersson <sebastian@bittr.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "^0.8.1", path = "vendor/bracket-lib" }
legion = { version = "^0.3.1", path = "vendor/legion" }
legion_typeuuid = { version = "^0.1.0", path = "vendor/legion_typeuuid" }
langgen_english = { path = "langgen_english" }
crossbeam-channel = "0.5.0"
serde = "1.0.117"
serde_yaml = "0.8.14"
serde_cbor = "0.11.1"
# bracket-lib = "0.8.*"
# legion = "^0.3.2"
# wfc = "*" # For maps?
# grid_2d = "*" # For the Map and Position/ScreenPosition/MapPosition?

[patch.crates-io]
legion = { path = 'vendor/legion' }
