[package]
name = "rouge"
description = "A simple roguelike game"
repository = "https://github.com/bofh69/rouge/"
keywords = [ "game", "rougelike" ]
categories = [ "games" ]
version = "0.1.0"
license = "GPL-3.0"
authors = ["Sebastian Andersson <sebastian@bittr.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bracket-lib = { version = "^0.8.1", path = "vendor/bracket-lib", features=['serde'] }
# legion = { version = "^0.4.0", path = "vendor/legion" }
legion_typeuuid = { version = "^0.1.0", path = "vendor/legion_typeuuid", features=['type-uuid', 'collect'] }
langgen_english = { path = "langgen_english" }
crossbeam-channel = "0.5.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8.14"
inventory = "0.1.9"
type-uuid = "0.1.2"
bincode = "1.3.1"
bracket-lib = { version = "0.8", features=['serde'] }
legion = "^0.4.0"
# wfc = "*" # For maps?
# grid_2d = "*" # For the Map and Position/ScreenPosition/MapPosition?

[patch.crates-io]
legion = { path = 'vendor/legion' }
