[package]
name = "langgen_english"
version = "0.1.0"
authors = ["Sebastian Andersson <sebastian@bittr.nu>"]
edition = "2018"
repository = "https://github.com/bofh69/rouge/"
keywords = [ "game", "text-output", "english" ]
categories = [ "games" ]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
